# Windos_Player

./: CMakeLists.txt  CMakeLists.txt.user.741bd24  README.md  clickableslider.cpp  clickableslider.h  encryption.cpp  encryption.h  equalizerwidget.cpp  equalizerwidget.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  musicplayer.cpp  musicplayer.h  simple_sync.cpp  simple_sync.h  user.cpp  user.h  usermanager.cpp  usermanager.h
